# fastrapi

./: .gitignore  .prettierrc.toml  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  copier.ps1  index.html  package.json  pnpm-lock.yaml  pyproject.toml  pytest_out.txt  thing.java  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml
assets/: index-B37wkdks.js  index-B5HifuRj.css  index-BacjtrBK.js  index-CDwsKh9Y.js  index-CInk3qUM.css  index-CKoN3zbZ.css  index-COb4eXeu.js  index-DCwbXqau.js  index-DhGoV3FZ.css  index-DiHa7KZC.css  index-DjaHwV2B.js  index-WaB3psAO.js  index-mVoIebQn.js  three-BgadC2uy.js  three-_BPqPFoy.js
benchmarks/: fastapi_test.py  fastrapi_async_basic.py  fastrapi_async_sleep.py  fastrapi_cache_resp.py  fastrapi_const.py  fastrapi_path_param.py  fastrapi_pydantic_post.py  fastrapi_pydantic_post_oldstyle.py  fastrapi_query_param.py  fastrapi_sync_threadpool.py  fastrapi_sync_uncached.py  stress.js  stress_path.js  stress_pydantic_post.js  stress_query.js  stresspost.js  stresstypes.js
examples/: basic.py  basic_big_json.py  different_request_types.py  fastrapi_types.py  middleware.py  middleware_204.py  middlewares.py  multipart.py  multipart_limited.py  pydantic_example.py  reload.py  static_files.py  websocket.py
examples/websocket/: bench1.py  bench2.py  bench3.py
fasterapi/: Cargo.toml
fasterapi/src/: lib.rs
models/: fastrapi.glb
models/crystals/: Crystal1.glb
pgo/: __init__.py  app.py  train.py
pgo/payloads/: address.json  analytics_batch.json  audit_events.json  cart.json  comments.json  inventory_bulk.json  large.json  login.json  metrics.json  notification_batch.json  order.json  organization.json  product.json  profile_patch.json  search_filters.json  small.json  support_ticket.json  user.json  ws_messages.txt
public/fonts/: random.json
public/models/: cloud.glb
public/models/crystals/: Crystal2.glb
src/: App.tsx  app.rs  background.rs  config.rs  cors.rs  datastructures.rs  dependencies.rs  exceptions.rs  globals.rs  index.css  lib.rs  macros.rs  main.tsx  middlewares.rs  openapi.rs  params.rs  py_handlers.rs  pydantic.rs  request.rs  responses.rs  security.rs  server.rs  status.rs  utils.rs  websocket.rs
src/bridge/: call_python.rs  mod.rs  py_to_rust.rs  rust_to_py.rs
src/components/: Chart.tsx  ContentRotate.tsx  Cursor.tsx  Docs.tsx  DocsSection.tsx  DocsTransition.tsx  Experience.tsx  Features.tsx  RainDown.tsx  Texts.tsx
src/components/HeroRotations/: Features.tsx
src/core/: extractor.rs  handler.rs  mod.rs  router.rs  state.rs
src/engine/: app.rs  background.rs  mod.rs  server.rs  types.rs
src/engine/server/: dispatch.rs  files.rs  lifecycle.rs  mod.rs  payload.rs  rate_limit.rs  reload.rs  routes.rs  serve.rs
src/ffi/: datastructures.rs  exceptions.rs  mod.rs  py_handlers.rs  pydantic.rs  router.rs
src/ffi/decorators/: init.rs  mod.rs  requests.rs  routing.rs
src/http/: mod.rs  request.rs  responses.rs  staticfiles.rs  websocket.rs
src/http/middleware/: cors.rs  gzip.rs  httpsredirect.rs  mod.rs  rate_limit.rs  session.rs
src/middleware/: cors.rs  gzip.rs  mod.rs  py_middleware.rs  session.rs  trusted_host.rs  trustedhost.rs
src/models/: Buildings.tsx  Cloud.tsx  MultiCrystal.tsx  fastrapimodel.tsx
src/models/crystals/: Buildings.tsx  Crystal1.tsx  Crystal2.tsx
src/openapi/: generator.rs  mod.rs  schema.rs  ui.rs
src/params/: mod.rs
src/python/: app.rs  background.rs  middleware.rs  mod.rs  models.rs  websocket.rs
src/routing/: dependencies.rs  mod.rs  params.rs  prometheus.rs  router.rs  security.rs  types.rs
src/types/: fastrapi.rs  mod.rs  response.rs  route.rs
src/utils/: guard.rs  helper.ts  json.rs  mod.rs  openapi.rs  utils.rs
static/: elements.html  redoc.html  scalar.html  swagger-ui.html
tests/: conftest.py  different_request_types.py  quick_test.py  stress.js  stresstypes.js  test1.py  test_api_router.py  test_app_api.py  test_background_tasks.py  test_basic_routing.py  test_body_validation.py  test_dependencies.py  test_exceptions.py  test_fastrapi.py  test_http_integration.py  test_imports.py  test_lifespan.py  test_params.py  test_path_params.py  test_query_params.py  test_request_object.py  test_responses_and_exceptions.py  test_websocket_smoke.py
