[package]
name = "fastrapi"
version = "0.2.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastrapi"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module", "py-clone"]}
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
axum = { version = "0.8.8", features = ["ws"] }
dashmap = "6.1.0"
once_cell = "1.21.4"
serde_json = "1.0.149"
serde-pyobject = "0.8.0"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde = "1.0.228"
num_cpus = "1.17.0"
smallvec = "1.15.1"
smartstring = "1.0.1"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
hyper = "1.8.1"
hyper-util = { version ="0.1.20", features = ["tokio"]}
# TODO: if using python package, make these features optional
tower-http = {version ="0.6.8", features = ["cors", "trace", "set-header", "compression-gzip"] }
tower-sessions = {version ="0.15.0", features = ["signed"]} # for sessions
tower = "0.5.3"
cookie = {version = "0.18.1",features = ["private", "signed"]}
pythonize = "0.28.0"
papaya = { version = "0.2.3" }
parking_lot = "0.12.5"
fastwebsockets = { version = "0.10.0", features = ["upgrade", "with_axum"]}
bytes = "1.11.1"
async-recursion = "1.1.1"
pyo3-nest = "0.1.4"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
opt-level = 3

[profile.release.build-override]
opt-level = 3
