[package]
name = "fastrapi"
version = "0.3.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastrapi"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module", "py-clone", "multiple-pymethods", "anyhow", "bytes", "experimental-async"] }
axum = { version = "0.8.8", features = ["ws"] }
dashmap = "6.1.0"
tokio = { version = "1.50.0", features = ["fs", "full", "io-util"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde = "1.0.228"
smallvec = "1.15.2"
smartstring = "1.0.1"
futures-util = "0.3.32"
hyper = "1.10.1"
hyper-util = { version = "0.1.20", features = ["tokio"] }
# TODO: if using python package, make these features optional
tower-http = { version = "0.6.8", features = ["cors", "trace", "set-header", "compression-gzip", "fs", "normalize-path", "catch-panic", "timeout", "request-id"] }
tower-sessions = { version = "0.15.0", features = ["signed"] } # for sessions
tower = "0.5.3"
cookie = { version = "0.18.1", features = ["private", "signed"] }
form_urlencoded = "1.2.2"
globset = "0.4"
notify = "8"
papaya = { version = "0.2.3" }
parking_lot = "0.12.5"
fastwebsockets = { version = "0.10.0", features = ["upgrade", "with_axum"] }
bytes = "1.12.1"
async-recursion = "1.1.1"
pyo3-nest = "0.1.5"
regex = "1"
matchit = "0.9.2"
ahash = "0.8.12"
percent-encoding = "2.3.2"
multer = "3.1.0"
base64 = "0.22.1"
uuid = { version = "1.23.4", features = ["v4"] }
async-stream = "0.3.6"
rsloop = { git = "https://github.com/RustedBytes/rsloop" }
sonic-rs = "0.5.8"
metrics-exporter-prometheus = "0.18.3"
metrics = "0.24.6"
axum-governor = "2.0.3"
arc-swap = "1.9.2"
strum = { version = "0.28.0", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
pprof2 = { version = "0.13", features = ["flamegraph"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
debug = true
opt-level = 3

[profile.release.build-override]
opt-level = 3

[features]
default = []
profile-flamegraph = []
