[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "fastrapi"
version = "0.2.11"
description = "A high-performance Python API framework powered by Rust"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["fastapi", "fastrapi", "api", "web", "framework", "fast", "rust"]
authors = [
  {name = "Preetham Pemmasani", email = "ppmpreetham1@gmail.com"}
]

classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pydantic>=2.9.0",
]

# If you have optional dependencies, uncomment and adjust this section
# [project.optional-dependencies]
# test = [
#   "pytest",
#   "pytest-cov"
# ]

[project.urls]
homepage = "https://github.com/ppmpreetham/fastrapi"
documentation = "https://github.com/ppmpreetham/fastrapi#readme"
repository = "https://github.com/ppmpreetham/fastrapi.git"
"bug tracker" = "https://github.com/ppmpreetham/fastrapi/issues"

# If you have CLI scripts, add them here
# [project.scripts]
# fastrapi-cli = "fastrapi:main_cli"

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
include = [{ path = "pgo/**/*", format = "sdist" }]
pgo-command = "python -m pgo.train"

[tool.uv]
package = false
