[package]
name = "fasterapi"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = "1.7.0"
once_cell = "1.21.3"
pyo3 = { version = "0.26.0", features = ["extension-module", "auto-initialize"] }
# pyo3-asyncio = { version = "0.26.0", features = ["tokio-runtime"] }
serde_json = "1.0.145"
tokio = "1.47.1"

[lib]
name = "fasterapi"
crate-type = ["cdylib"]  # important for Python
